--- a/src/app/components/ui/CommentBox/CommentBox.module.css
+++ b/src/app/components/ui/CommentBox/CommentBox.module.css
@@ -1,8 +1,18 @@
 .container {
-    border-radius: 24px 24px 4px 24px;
     background-color: var(--accent-100);
     border: solid 1px var(--accent-300);
     padding: 20px;
+    max-width: 600px;
+}
+
+.container.userComment {
+    border-radius: 24px 4px 24px 24px;
+    margin-left: auto;
+}
+
+.container.otherComment {
+    border-radius: 4px 24px 24px 24px;
+    margin-right: auto;
 }
 
 .headerRow {
